# WhenTrade

./: .env.example  .gitignore  LICENSE  README-zh_CN.md  README.md  alembic.ini  pyproject.toml  requirements-performance.txt  requirements.txt  start.sh  stop.sh
.github/workflows/: i18n-validation.yml
alembic/: env.py
alembic/versions/: 02c4f9202d5c_add_role_and_user_metadata_fields.py  5b2f2bc6cefd_add_cost_control_tables.py  ad760e705316_create_user_and_auth_tables.py  enhance_user_tables_account_management.py  remove_user_foreign_key.py
config/: settings.json
configs/: crypto_news_config.yaml
core/: __init__.py  celery_app.py  config.py  default_config.py  dependencies.py  main.py  mcp_config.json  tasks.py
core/adapters/: __init__.py  base.py  coingecko.py  coingecko_adapter.py  news_api.py
core/adapters/ai_provider/: __init__.py  usage_tracker.py
core/adapters/database/: cost_repository.py  user_repository.py
core/adapters/email/: email_service.py
core/adapters/storage/: avatar_storage.py
core/agents/: __init__.py  base.py  engine.py  factory.py  prompt_loader.py  selector.py  templates.py
core/agents/analysts/: market_analyst.py  news_analyst.py  social_media_analyst.py
core/agents/crypto/: crypto_agents.py
core/agents/managers/: portfolio_manager.py  research_manager.py  risk_manager.py
core/agents/prediction/: prediction_agents.py
core/agents/process/: process_agents.py
core/agents/researchers/: bear_researcher.py  bull_researcher.py
core/agents/risk_mgmt/: aggresive_debator.py  conservative_debator.py  neutral_debator.py
core/agents/tools/: __init__.py  tool_adapter.py
core/agents/trader/: trader.py
core/agents/utils/: agent_states.py  agent_utils.py  debate_utils.py  memory.py  (+1 more)
core/analysis/: engine.py  thought_stream.py
core/auth/: auth.py
core/base/: __init__.py  abstract.py  exceptions.py  types.py
core/business/: __init__.py  llm_factory.py  market_config.py
core/config/: __init__.py  analysis_scopes.py  config_manager.py  constants.py  database_config.py  database_manager.py  mongodb_storage.py  settings.py
core/cost_control/: __init__.py  cost_manager.py
core/crypto/: __init__.py  market_adapter.py
core/data/: __init__.py  pipeline.py  unified_adapter.py
core/database/: __init__.py  enums.py  init_db.py  session.py
core/dataflows/: __init__.py  cache_manager.py  config.py  data_source_manager.py  finnhub_utils.py  googlenews_utils.py  interface.py  optimized_us_data.py  realtime_news_utils.py  utils.py
core/domain/: __init__.py
core/graph/: __init__.py  conditional_logic.py  propagation.py  reflection.py  setup.py  signal_processing.py  whentrade_graph.py  workflow_engine.py
core/i18n/: __init__.py  agent_prompts.py  console_messages.py  dynamic_loader.py  locale_manager.py  message_generator.py  messages.py  system_prompts.py
core/infrastructure/: __init__.py  backup.py  database.py  logger.py  monitoring.py
core/llm_adapters/: __init__.py  deepseek_adapter.py  openai_compatible_base.py
core/mcp/: __init__.py  __main__.py  client.py  server.py
core/models/: __init__.py  data.py
core/plugins/: __init__.py  crypto_defi_plugin.py  plugin_base.py  plugin_manager.py  plugin_registry.py  technical_analysis_plugin.py
core/ports/: __init__.py  achievement_system.py  budget_management.py  cost_analytics.py  security_settings.py  tool_management.py  user_preferences.py  user_profile.py
core/scheduler/: __init__.py  __main__.py  main.py
core/services/: __init__.py  agent_mapping.py  billing.py  cache_service.py  collaboration_service.py  cost_analytics.py  crypto_swarm_service.py  llm_config_service.py  llm_service.py  notification_service.py  optimization_advisor.py  persistence_service.py  redis_pubsub.py  security_service.py  tool_executor.py  user_preferences_service.py
core/tools/: README.md  __init__.py  unified_news_tool.py
core/utils/: asset_utils.py  email.py  logging_init.py  logging_manager.py  stock_utils.py  token_manager.py  tool_logging.py
docs/images/: README.md
scripts/: create_tables.sql  i18n-report.js  init-db.sql  install_mcp_servers.sh
web/: .env.development  .env.example  .eslintrc.cjs  .gitignore  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
web/patches/: @base-org+account+0.0.0.patch
web/scripts/: i18n-check.js  i18n-simple-check.sh
web/src/: App.vue  env.d.ts  main.ts  style.css
(+208 files in other folders)
